--- a/experiencia.html
+++ b/experiencia.html
@@ -6,7 +6,7 @@
     <title>Hoja de Vida</title>
   </head>
     <body>
-<h1><img src="C:\Users\Sergio\Desktop\Nextu\Web mia\Imagen\logo.svg" height="200px" width="200px">Hoja de Vida</h1>
+<h1><img src="Imagen\logo.svg" height="200px" width="200px">Hoja de Vida</h1>
       <h2 id="Datos Personales">Datos Personales</h2>
       <h3>Nombre:<em> Sergio D.</em></h3>
       <h3>Apellido: <em>CERVERA</em></h3>
@@ -14,27 +14,27 @@
       <h3>Lugar de Nacimiento:<em> Neuquén</em> - Argentina</h3>
     </header>
       <nav>
-        <a href="C:\Users\Sergio\Desktop\Nextu\Web mia\index.html" target="_blank"> Inicio </a>
+        <a href="index.html" target="_blank"> Inicio </a>
         |
-        <a href="C:\Users\Sergio\Desktop\Nextu\Web mia\educacion.html" target="_blank">Educacion</a>
+        <a href="educacion.html" target="_blank">Educacion</a>
         |
-        <a href="C:\Users\Sergio\Desktop\Nextu\Web mia\experiencia.html" target="_blank">Experiencia</a>
+        <a href="experiencia.html" target="_blank">Experiencia</a>
       </nav>
 <h2>Experiencia</h2>
 <p>Video presentación</p>
 
 <video controls>
-<source src="C:\Users\Sergio\Desktop\Nextu\Web mia\Video\Video Presentacion.mp4" type="video/mp4">
+<source src="Video\Video Presentacion.mp4" type="video/mp4">
 </video>
 
 <p>Hobbies</p>
 <audio controls>
-<source src="C:\Users\Sergio\Desktop\Nextu\Web mia\Audio\Hobbies.mp3.m4a" type="audio/mp3">
+<source src="Audio\Hobbies.mp3.m4a" type="audio/mp3">
 </audio>
   <br>
 
 <footer>
-  <img src="C:\Users\Sergio\Desktop\Nextu\Web mia\Imagen\yahoo.jpg" height="25px" width="25px"> solosdc13@yahoo.com.ar  | <img src="C:\Users\Sergio\Desktop\Nextu\Web mia\Imagen\whatsapp.jpg" height="25px" width="25px"> +54 299 4202732 | <img src="C:\Users\Sergio\Desktop\Nextu\Web mia\Imagen\instagram.png" height="25px" width="25px"> sergio.cervera.549
+  <img src="Imagen\yahoo.jpg" height="25px" width="25px"> solosdc13@yahoo.com.ar  | <img src="Imagen\whatsapp.jpg" height="25px" width="25px"> +54 299 4202732 | <img src="Imagen\instagram.png" height="25px" width="25px"> sergio.cervera.549
   </footer>
 </body>
 </html>
